--- a/app/design/adminhtml/default/default/template/bundle/product/composite/fieldset/options/type/select.phtml
+++ b/app/design/adminhtml/default/default/template/bundle/product/composite/fieldset/options/type/select.phtml
@@ -5,34 +5,37 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
+/** @var Mage_Bundle_Block_Adminhtml_Catalog_Product_Composite_Fieldset_Options_Type_Select $this */
+$option = $this->getOption();
+$selections = $option->getSelections();
+$skipSaleableCheck = Mage::helper('catalog/product')->getSkipSaleableCheck();
+list($defaultQty, $canChangeQty) = $this->_getDefaultValues();
 ?>
-<?php /** @var Mage_Bundle_Block_Adminhtml_Catalog_Product_Composite_Fieldset_Options_Type_Select $this */ ?>
-<?php $_option      = $this->getOption(); ?>
-<?php $_selections  = $_option->getSelections(); ?>
-<?php $_default     = $_option->getDefaultSelection(); ?>
-<?php $_skipSaleableCheck = Mage::helper('catalog/product')->getSkipSaleableCheck(); ?>
-<?php list($_defaultQty, $_canChangeQty) = $this->_getDefaultValues(); ?>
-
 <dt>
     <span class="qty-holder">
-        <label for="bundle-option-<?= $_option->getId() ?>-qty-input"><?= $this->__('Qty:') ?>&nbsp;</label><input <?php if (!$_canChangeQty) echo ' disabled="disabled"' ?> id="bundle-option-<?= $_option->getId() ?>-qty-input" class="input-text qty<?php if (!$_canChangeQty) echo ' qty-disabled' ?>" type="text" name="bundle_option_qty[<?= $_option->getId() ?>]" value="<?= $_defaultQty ?>"/>
+        <label for="bundle-option-<?= $option->getId() ?>-qty-input"><?= $this->__('Qty:') ?></label>
+        <input<?= !$canChangeQty ? ' disabled="disabled"' : '' ?> id="bundle-option-<?= $option->getId() ?>-qty-input" class="input-text qty<?= !$canChangeQty ? ' qty-disabled' : '' ?> required-entry validate-digits validate-greater-than-zero" type="number" min="1" name="bundle_option_qty[<?= $option->getId() ?>]" value="<?= $defaultQty ?>"/>
     </span>
-    <label<?php if ($_option->getRequired()) echo ' class="required"' ?>><?php if ($_option->getRequired()) echo '<em>*</em>' ?><?= $this->escapeHtml($_option->getTitle()) ?></label>
+    <label for="bundle-option-<?= $option->getId() ?>"<?= $option->getRequired() ? ' class="required"' : '' ?>>
+        <?= $this->escapeHtml($option->getTitle()) ?>
+    </label>
 </dt>
-<dd<?php if ($_option->decoratedIsLast){?> class="last"<?php }?>>
+<dd>
     <div class="input-box">
     <?php if ($this->_showSingle()): ?>
-        <?= $this->getSelectionTitlePrice($_selections[0]) ?>
-        <input type="hidden" name="bundle_option[<?= $_option->getId() ?>]" value="<?= $_selections[0]->getSelectionId() ?>" price="<?= $this->getSelectionPrice($_selections[0]) ?>"/>
+        <?= $this->getSelectionTitlePrice($selections[0]) ?>
+        <input type="hidden" name="bundle_option[<?= $option->getId() ?>]" value="<?= $selections[0]->getSelectionId() ?>" price="<?= $this->getSelectionPrice($selections[0]) ?>"/>
     <?php else: ?>
-        <select id="bundle-option-<?= $_option->getId() ?>" name="bundle_option[<?= $_option->getId() ?>]" class="bundle-option-<?= $_option->getId() ?><?php if ($_option->getRequired()) echo ' required-entry' ?> bundle-option-select change-container-classname" onchange="ProductConfigure.bundleControl.changeSelection(this)">
+        <select id="bundle-option-<?= $option->getId() ?>" name="bundle_option[<?= $option->getId() ?>]" class="bundle-option-<?= $option->getId() ?><?= $option->getRequired() ? ' required-entry' : '' ?> bundle-option-select change-container-classname" onchange="ProductConfigure.bundleControl.changeSelection(this)">
             <option value=""><?= $this->__('Choose a selection...') ?></option>
-        <?php foreach ($_selections as $_selection): ?>
-            <option value="<?= $_selection->getSelectionId() ?>"<?php if ($this->_isSelected($_selection)) echo ' selected="selected"' ?><?php if (!$_selection->isSaleable() && !$_skipSaleableCheck) echo ' disabled="disabled"' ?> price="<?= $this->getSelectionPrice($_selection) ?>" qtyId="bundle-option-<?= $_option->getId() ?>-qty-input"><?= $this->getSelectionTitlePrice($_selection, false) ?></option>
+        <?php foreach ($selections as $selection): ?>
+            <?php $selected = $this->_isSelected($selection) ? ' selected="selected"' : '' ?>
+            <?php $disabled = !$selection->isSaleable() && !$skipSaleableCheck ? ' disabled="disabled"' : '' ?>
+            <option value="<?= $selection->getSelectionId() ?>"<?= $selected ?><?= $disabled ?> price="<?= $this->getSelectionPrice($selection) ?>" qtyId="bundle-option-<?= $option->getId() ?>-qty-input"><?= $this->getSelectionTitlePrice($selection, false) ?></option>
         <?php endforeach ?>
         </select>
     <?php endif ?>
