--- a/app/design/adminhtml/default/default/template/catalog/product/composite/fieldset/configurable.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/composite/fieldset/configurable.phtml
@@ -5,24 +5,31 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2023 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
- ?>
-<?php /** @var Mage_Adminhtml_Block_Catalog_Product_Composite_Fieldset_Configurable $this */ ?>
-<?php $_product = $this->getProduct(); ?>
-<?php $_attributes = Mage::helper('core')->decorateArray($this->getAllowAttributes()); ?>
-<?php $_skipSaleableCheck = Mage::helper('catalog/product')->getSkipSaleableCheck(); ?>
-<?php if (($_product->isSaleable() || $_skipSaleableCheck) && count($_attributes)):?>
-<div id="catalog_product_composite_configure_fields_configurable" class="<?= $this->getIsLastFieldset() ? 'last-fieldset' : '' ?>">
+
+/** @var Mage_Adminhtml_Block_Catalog_Product_Composite_Fieldset_Configurable $this */
+
+$product = $this->getProduct();
+$attributes = $this->getAllowAttributes();
+$skipSaleableCheck = Mage::helper('catalog/product')->getSkipSaleableCheck();
+?>
+
+<?php if (($product->isSaleable() || $skipSaleableCheck) && count($attributes)): ?>
+<div>
     <h4><?= Mage::helper('catalog')->__('Associated Products') ?></h4>
     <div class="product-options">
         <dl>
-        <?php foreach($_attributes as $_attribute): ?>
-            <dt><label class="required"><em>*</em><?= $this->escapeHtml($_attribute->getLabel()) ?></label></dt>
-            <dd<?php if ($_attribute->decoratedIsLast){?> class="last"<?php }?>>
+        <?php foreach($attributes as $attribute): ?>
+            <dt>
+                <label for="attribute<?= $attribute->getAttributeId() ?>" class="required">
+                    <?= $this->escapeHtml($attribute->getLabel()) ?>
+                </label>
+            </dt>
+            <dd>
                 <div class="input-box">
-                    <select name="super_attribute[<?= $_attribute->getAttributeId() ?>]" id="attribute<?= $_attribute->getAttributeId() ?>" class="required-entry super-attribute-select">
+                    <select name="super_attribute[<?= $attribute->getAttributeId() ?>]" id="attribute<?= $attribute->getAttributeId() ?>" class="required-entry super-attribute-select">
                         <option><?= Mage::helper('catalog')->__('Choose an Option...') ?></option>
                     </select>
                 </div>
@@ -31,14 +38,7 @@
         </dl>
     </div>
 </div>
-<script type="text/javascript">
-    var config = <?= $this->getJsonConfig() ?>;
-    if (window.productConfigure) {
-        config.containerId = window.productConfigure.blockFormFields.id;
-        if (window.productConfigure.restorePhase) {
-            config.inputsInitialized = true;
-        }
-    }
-    ProductConfigure.spConfig = new Product.Config(config);
+<script>
+    window.productConfigure?.registerConfigurableFieldset(<?= $this->getJsonConfig() ?>);
 </script>
 <?php endif ?>
