--- a/app/design/adminhtml/default/default/template/catalog/product/composite/fieldset/options/type/default.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/composite/fieldset/options/type/default.phtml
@@ -5,12 +5,13 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2023 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Catalog_Block_Product_View_Options_Type_Default $this */
+$option = $this->getOption();
 ?>
-<?php /** @var Mage_Catalog_Block_Product_View_Options_Type_Default $this */ ?>
-<?php $option = $this->getOption(); ?>
 <dt>
     <label><?= $this->escapeHtml($option->getTitle()) ?></label>
 </dt>
