--- a/app/design/adminhtml/default/default/template/catalog/product/composite/fieldset/qty.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/composite/fieldset/qty.phtml
@@ -5,25 +5,21 @@
  * @package     default_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2017-2023 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
+
+/** @var Mage_Adminhtml_Block_Catalog_Product_Composite_Fieldset_Qty $this */
 ?>
-<?php /** @var Mage_Adminhtml_Block_Catalog_Product_Composite_Fieldset_Qty $this */ ?>
-<div id="product_composite_configure_fields_qty" class="<?= $this->getIsLastFieldset() ? 'last-fieldset' : '' ?>">
+<div>
     <div class="product-options">
         <dl>
-            <dt><label><?= Mage::helper('catalog')->__('Quantity') ?></label> <input id="product_composite_configure_input_qty" class="input-text" type="text" name="qty" value="<?= $this->getQtyValue() * 1 ?>"></dt>
+            <dt>
+                <label>
+                    <?= Mage::helper('catalog')->__('Quantity') ?>
+                    <input type="number" min="1" name="qty" value="<?= $this->getQtyValue() ?>" class="input-text validate-digits validate-greater-than-zero">
+                </label>
+            </dt>
         </dl>
     </div>
 </div>
-
-<script type="text/javascript">
-    //<![CDATA[
-    var input = document.getElementById('product_composite_configure_input_qty');
-    if(input.value.length == 0) {
-        input.value = "1";
-    }
-    //]]>
-</script>
-
